technical writeup updates

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
 
+*.docx
+*.parquet
+
 *.csv
 processed_traffic_data.csv
 
